HelmWorkShop/traefik-dashboard/auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: kube-system
spec:
  basicAuth:
    # namespace: kube-system
    secret: traefik-auth
