HelmWorkShop/traefik-dashboard/Ing-traefik-dashboard.yaml
# https://traefik.io/blog/traefik-proxy-kubernetes-101/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  # namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: infra.sololab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
