HelmWorkShop/traefik-dashboard/IngressRoute-update.yaml
# dashboard.yaml
# https://github.com/traefik/traefik-helm-chart/tree/master/traefik
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    # Hostname to match
    - match: Host(`solo.lab`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      # Service to redirect requests to
      services:
        # Special service created by Traefik pod
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-auth
  # Use the secret generated by cert-manager
  tls:
    secretName: solo.lab
