HelmWorkShop/traefik-dashboard/dashboard.yaml
# dashboard.yaml
# https://github.com/traefik/traefik-helm-chart/tree/master/traefik
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.lab`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
